fix z-index for logo

--- a/scss/kks-styles/_base.scss
+++ b/scss/kks-styles/_base.scss
@@ -63,6 +63,7 @@
         padding: 0;
         margin: 0;
         aspect-ratio: 3/2;
+        z-index: 500;
 
         .site--logo {
             aspect-ratio: 3/2;
@@ -145,7 +146,7 @@
     position: relative;
 
     .gw-mm-item__dropdown-wrapper {
-        left: 0 !important;
+        right: 0 !important;
         max-width: 300px !important;
     }
 }
